--- a/web/package.json
+++ b/web/package.json
@@ -12,6 +12,7 @@
     "@onflow/fcl": "^1.3.2",
     "next": "13.0.5",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "styled-components": "^5.3.6"
   }
 }
